Fixes circles header (added overflow hidden: ) & added an open class for the lang picker

--- a/css/_language-picker.scss
+++ b/css/_language-picker.scss
@@ -10,9 +10,15 @@
     &:hover {
         background-color: rgba($color-RO_donkerblauw--interaction, 1);
         color: #fff;
-        transition: background-color var(--transition-in), color var(--transition-in);
+        transition: color var(--transition-in), color var(--transition-in), top var(--transition-in);
+    }
+
+    &.open {
+        top: 10px;
     }
 }
+
+
 
 .content-error .language-picker {
     top: -26px;
